# depth_image_averaging

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  rviz.rviz
assets/: depth_image_averaging.drawio  how_it_works.drawio  mad_filtering.drawio  timing.drawio
include/depth_image_averaging/: depth_image_averager.h  depth_image_averaging_nodelet.h
launch/: start.launch
src/: depth_image_averager.cpp  depth_image_averaging_node.cpp  depth_image_averaging_nodelet.cpp
src/cl/: computeMAD.cl  computeMean.cl  computeMedian.cl
src/opencl/: computeMean.cl
